--- a/content/post/2021-04-21-quantile-regression-forests-for-prediction-intervals/index.Rmd
+++ b/content/post/2021-04-21-quantile-regression-forests-for-prediction-intervals/index.Rmd
@@ -19,11 +19,11 @@ In this post I will build prediction intervals using quantile regression, more s
 * [Understanding Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/) (Part 1)
 * [Simulating Prediction Intervals](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/) (Part 2)
 
-This post should be read as a continuation on Part 1^[Part 2 and this post are both essentially distinct follow-ups to Part 1. So you don't really need to have read Part 2. However it may be useful (Part 2's introductory section offers a more thorough list of things I will not be restating in this post).]. I do not reintroduce terms, figures, examples, etc. that are initially described in that post^[I am also not as thorough in elucidating the procedure's used in this post as I am in [Part 2, Procedure](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#procedure), for example.]. My primary purpose here is to encode an example of building quantile regression forests for prediction intervals using the [tidymodels](https://www.tidymodels.org/) suite of packages and briefly review interval quality.  
+This post should be read as a continuation on Part 1^[Part 2 and this post are both essentially distinct follow-ups to Part 1. So you don't really need to have read Part 2. However it may be useful (Part 2's introductory section offers a more thorough list of things I will not be restating in this post).]. I do not reintroduce terms, figures, examples, etc. that are initially described in that post^[I am also not as thorough in elucidating the procedure's used in this post as I am in [Part 2, Procedure](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#procedure), for example.]. My primary purpose here is to encode an example with the [tidymodels](https://www.tidymodels.org/) suite of packages of building quantile regression forests for prediction intervals and to briefly review interval quality.  
 
 # Quantile Regression
 
-Rather than make a prediction for the mean and then add a measure of variance to produce a prediction interval (as described in [Part 1, A Few Things to Know About Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#a-few-things-to-know-about-prediction-intervals)), quantile regression predicts the intervals directly. In quantile regression, predictions don't correspond with the arithmetic mean but instead with a specified quantile^[Default is generally 50%, the median.]. To generate a 90% prediction interval, you just make predictions at the 5th and 95th percentiles -- together the two predictions constitute a prediction interval.
+Rather than make a prediction for the mean and then add a measure of variance to produce a prediction interval (as described in [Part 1, A Few Things to Know About Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#a-few-things-to-know-about-prediction-intervals)), quantile regression predicts the intervals directly. In quantile regression, predictions don't correspond with the arithmetic mean but instead with a specified quantile^[Default is generally 50%, the median.]. To create a 90% prediction interval, you just make predictions at the 5th and 95th percentiles -- together the two predictions constitute a prediction interval.
 
 The chief advantages over the parametric method described in [Part 1, Understanding Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/) are that quantile regression has...
 
@@ -33,23 +33,23 @@ The chief advantages over the parametric method described in [Part 1, Understand
 Advantages over the approach I describe in [Simulating Prediction Intervals](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/) are...
 
 * computation costs do not get out of control with more sophisticated model types^[... where even building a single model can take a long time. As rather than building *many* models, you are only building one or maybe two models. Some quantile regression models, such as the one I go through in this post, can predict any quantile from a single model, other model types require a separate model for each quantile -- so for a prediction interval with a lower and upper bound, that means two models (and attempting to tune these based on empirical coverage rates can mean more).].
-* can more easily handle heteroskedasticity of errors^[The simulation based approach from Part 2 took random samples of residuals to generate the distribution for uncertainty due to sample. To adjust for heteroskedasticity, the sampling of these residuals would in some way needed to have been conditional on the observation or prediction.]. This is described nicely in Dan Saatrup Nielsen's post on [Quantile regression](https://saattrupdan.github.io/2020-03-09-quantile-regression/).
+* can more easily handle heteroskedasticity of errors^[The simulation based approach from Part 2 took random samples of residuals to generate the distribution for uncertainty due to sample. To adjust for heteroskedasticity, the sampling of these residuals would in some way needed to have been conditional on the observation or prediction.]. This advantage and others are described in Dan Saatrup Nielsen's post on [Quantile regression](https://saattrupdan.github.io/2020-03-09-quantile-regression/).
 
-I recommend Dan's post on [Quantile regression forests](https://saattrupdan.github.io/2020-04-05-quantile-regression-forests/) for a description of *how* tree-based methods can be used to generate quantile predictions (which is rather intuitive).
+I also recommend Dan's post on [Quantile regression forests](https://saattrupdan.github.io/2020-04-05-quantile-regression-forests/) for a description of *how* tree-based methods may be used to generate predictions for quantiles (which is rather intuitive).
 
 For these reasons, quantile regression is often a highly practical choice for many modeling scenarios.
 
 # Example
 
-The {parsnip} package does not yet have a `parsnip::linear_reg()` method that supports quantile regression^[I could edit my set-up to incorporate the {quantreg} package but would sacrifice some of the the ease that goes with using tidymodels.] (see [tidymodels/parsnip#465](https://github.com/tidymodels/parsnip/issues/465)). I will take this as an opportunity to set-up an example for a random forest model using the {[ranger](https://github.com/imbs-hl/ranger)} package as the engine in my workflow^[Which tidymodels is already mostly set-up to handle]. 
+The {parsnip} package does not yet have a `parsnip::linear_reg()` method that supports linear quantile regression^[I could edit my set-up to incorporate the {quantreg} package but would sacrifice some of the the ease that goes with using tidymodels.] (see [tidymodels/parsnip#465](https://github.com/tidymodels/parsnip/issues/465)). Hence I took this as an opportunity to set-up an example for a random forest model using the {[ranger](https://github.com/imbs-hl/ranger)} package as the engine in my workflow^[Which tidymodels is already mostly set-up to handle]. 
 
-When comparing the quality of prediction intervals from this post ([Review]) against those from [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) or [Part 2](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#review) we will not be able to untangle whether the differences are due to the difference in model type (linear versus random forest) or the difference in interval estimation technique (parametric or simulated versus quantile regression).
+When comparing the quality of prediction intervals in this post against those from [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) or [Part 2](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#review) we will not be able to untangle whether differences are due to the difference in model type (linear versus random forest) or the difference in interval estimation technique (parametric or simulated versus quantile regression).
 
 A more apples-to-apples comparison would have been to abandon the {parsnip} framework and gone through an example using the {quantreg} package for quantile regression... maybe in a future post.
 
 ## Quantile Regression Forest
 
-Starting libraries and data will be the same as in the [Providing More Than Point Estimates](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates) section of Part 1. The code below is sourced and printed from that post’s .Rmd file.
+Starting libraries and data will be the same as in [Part 1, Providing More Than Point Estimates](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates). The code below is sourced and printed from that post’s .Rmd file.
 
 ```{r source-code, include = FALSE, cache = FALSE}
 devtools::source_gist("https://gist.github.com/brshallo/e963b9dca5e4e1ab12ec6348b135362e")
@@ -68,12 +68,10 @@ Load data:
 ```{r load-data, echo = TRUE, eval = FALSE}
 ```
 
-Unlike [Part 2, Example](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#example), the pre-processing and model set-up is not the same as in [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates).
-
-In setting-up our pre-processing recipe, we remove a few of the transformations that had been important for linear models:
+Unlike in [Part 2, Example](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#example), the pre-processing and model set-up is not the same as in [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates). We can remove a few of the transformations that had been important for linear models:
 
 * transformations that don't change the order of observations in a regressor generally don't make a difference for tree-based methods, so we can remove most of the `step_log()`'s
-* tree based models are also good at capturing dependent relationships on their own, hence we can also remove `step_interact()`
+* tree based models are also good at capturing interactions / dependent relationships on their own, hence we can also remove `step_interact()`
 
 ```{r specify-recipe}
 #RF models require comparably less pre-processing to linear models
@@ -91,8 +89,8 @@ rf_recipe <-
 For our quantile regression example, we are using a random forest model rather than a linear model.  Specifying `quantreg = TRUE` tells {ranger} that we will be estimating quantiles rather than averages.
 
 ```{r specify-model}
-rf_mod <- rand_forest() %>% 
-  set_engine("ranger", importance = "impurity", seed = 63233, quantreg = TRUE) %>% 
+rf_mod <- rand_forest() %>%
+  set_engine("ranger", importance = "impurity", seed = 63233, quantreg = TRUE) %>%
   set_mode("regression")
 
 set.seed(63233)
@@ -146,11 +144,11 @@ rf_preds_test %>%
   coord_fixed()
 ```
 
-If we compare these against similar samples when using the [analytic](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) and [simulation](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#review) based approaches for linear regression models, we find that the width of the intervals varies substantially more when built using quantile regression forests.
+If we compare these against similar samples when using the [analytic](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) and [simulation](https://www.bryanshalloway.com/2021/04/05/simulating-prediction-intervals/#review) based approaches for linear regression models, we find that the width of the intervals vary substantially more when built using quantile regression forests.
 
 ## Performance
 
-Overall model performance on a holdout dataset is similar (maybe slightly better) for an (untuned^[Did not do any hyper parameter tuning or other investigation in producing model.]) Quantile Regression Forest compared to the linear model (MAPE on holdout dataset of 11% vs. 11.8% with linear model)^[To compare these, I should have used cross-validation and then could have applied any of a number of methods described in [Tidy Models with R, ch. 11](https://www.tmwr.org/compare.html).].
+Overall model performance on a holdout dataset is similar (maybe slightly better) for an (untuned) Quantile Regression Forest^[Did not do any hyper parameter tuning or other investigation in producing model.] compared to the linear model (MAPE on holdout dataset of 11% vs. 11.8% with linear model)^[To compare these, I should have used cross-validation and then could have applied any of a number of methods described in [Tidy Models with R, ch. 11](https://www.tmwr.org/compare.html).].
 
 As discussed in [Part 1, Cautions With Overfitting](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#cautions-with-overfitting), we can compare performance on train and holdout datasets to provide an indicator of overfitting:
 
@@ -204,11 +202,11 @@ rf_preds_test %>%
   gt::fmt_number("coverage_prop", decimals = 1) 
 ```
 
-Surprisingly, we see a coverage probability for our prediction intervals of >96%^[A confidence interval of between 95% and 98%.] on our holdout dataset[^2] -- greater than our expected coverage of 90%. This suggests our prediction intervals are, in aggregate, quite conservative^[3]. Typically the coverage on the holdout dataset would be the same or *less* than the expected coverage. 
+Surprisingly, we see a coverage probability for our prediction intervals of >96%^[A confidence interval of between 95% and 98%.] on our holdout dataset[^2] -- greater than our expected coverage of 90%. This suggests our prediction intervals are, in aggregate, quite conservative[^3]. Typically the coverage on the holdout dataset would be the same or *less* than the expected coverage. 
 
-This is even more surprising in the context of the [Performance] indicator of our model for overfitting. (In the future I may investigate the reason for this more closely, for now I just opened a [question on Cross Validated](https://stackoverflow.com/questions/66666257/prediction-intervals-from-quantile-regression-forests-have-higher-coverage-than).)
+This is even more surprising in the context of the [Performance] indicator of our model for overfitting. See [Residual Plots] in the [Appendix] for a few additional figures and notes. In the future I may investigate the reason for this more closely, for now I simply opened a [question on Cross Validated](https://stackoverflow.com/questions/66666257/prediction-intervals-from-quantile-regression-forests-have-higher-coverage-than).
 
-In [Part 1, Cautions with overfitting](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#cautions-with-overfitting), I described how to tune prediction intervals using coverage rates from holdout data. The code below applies this approach, though due to the surprising finding of a *higher empirical coverage* rate -- the opposite of what we typically observe -- I will be identifying a more narrow (rather than broader) *expected coverage*, i.e. prediction interval^[You would typically want to do this on a separate holdout validation dataset from that which you are testing your model against.].
+In [Part 1, Cautions with overfitting](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#cautions-with-overfitting), I described how to tune prediction intervals using coverage rates on holdout data. The code below applies this approach, though due to the surprising finding of a *higher empirical coverage* rate (which is opposite of what we typically observe) I will be identifying a more narrow (rather than broader) *expected coverage*, i.e. prediction interval^[You would typically want to do this on a separate holdout validation dataset from that which you are testing your model against.].
 
 [^2]: Coverage on the training set is even higher:
     
@@ -364,10 +362,61 @@ This post walked through an example using quantile regression forests within {ti
 
 *Downsides:* 
 
-* Is not immune to overfitting and related issues (though these also plague parametric methods).
-* Models are more typically designed to produce the 'mean' value rather than a quantile, so there may be fewer model classes or packages with methods ready to use out-of-the-box. These may require editing the objective function so that the model is optimized on the quantile loss, for example^[See Dan's post [Quantile regression](https://saattrupdan.github.io/2020-03-09-quantile-regression/) for an example in python.].
+* Are not immune to overfitting and related issues (though these also plague parametric methods and can sometimes be improved by tuning).
+* Models are more commonly designed to predict the mean rather than a quantile, so there may be fewer model classes or packages available that are ready to use out-of-the-box. These may require editing the objective function so that the model is optimized on the quantile loss, for example^[See Dan's post [Quantile regression](https://saattrupdan.github.io/2020-03-09-quantile-regression/) for an example in python.].
 
 # Appendix
+
+## Residual Plots
+
+Remember that these are on a `log(10)` scale.
+
+*Residual plot on training data:*
+```{r}
+rf_preds_train %>% 
+  mutate(covered = ifelse(
+    Sale_Price >= .pred_lower & Sale_Price <= .pred_upper, 
+    "covered",
+    "not covered")
+    ) %>% 
+  mutate(across(c("Sale_Price", contains(".pred")), ~log(.x, 10))) %>% 
+  mutate(.resid = Sale_Price - .pred) %>% 
+  mutate(pred_original = .pred) %>% 
+  mutate(across(contains(".pred"), ~(.x - .pred))) %>% 
+  ggplot(aes(x = pred_original,))+
+  geom_errorbar(aes(ymin = .pred_lower, ymax = .pred_upper, colour = "pred interval"), alpha = 0.3)+
+  geom_point(aes(y = .resid, colour = covered))+
+  theme_bw()+
+  labs(x = "Prediction",
+       y = "Residuals over Prediction Interval",
+       title = "Residual plot on training set")
+```
+
+* The several points with residuals of zero on the training data made me think that {ranger} might be set-up such that if there are many residuals of 0, it may assume there is overfitting going on and then default to some kind of conservative or alternative approach to computing the prediction intervals. However this proved false as when I tried higher values of `min_n` -- which would reduce any overfitting -- I still had similar results regarding a higher than expected coverage rate.
+* I also wondered whether some of the extreme points (e.g. the one with a residual of -0.5) may be contributing to the highly conservative intervals. When I removed outliers I found a *slight* narrowing of the prediction intervals, but not much... so that also didn't seem to explain things.
+
+Hopefully people on [Cross Validated]((https://stackoverflow.com/questions/66666257/prediction-intervals-from-quantile-regression-forests-have-higher-coverage-than)) know more...
+
+*Residual plot on holdout data:*
+```{r}
+rf_preds_test %>% 
+  mutate(covered = ifelse(
+    Sale_Price >= .pred_lower & Sale_Price <= .pred_upper, 
+    "covered",
+    "not covered")
+  ) %>% 
+  mutate(across(c("Sale_Price", contains(".pred")), ~log(.x, 10))) %>% 
+  mutate(.resid = Sale_Price - .pred) %>% 
+  mutate(pred_original = .pred) %>% 
+  mutate(across(contains(".pred"), ~(.x - .pred))) %>% 
+  ggplot(aes(x = pred_original,))+
+  geom_errorbar(aes(ymin = .pred_lower, ymax = .pred_upper, colour = "pred interval"), alpha = 0.3)+
+  geom_point(aes(y = .resid, colour = covered))+
+  theme_bw()+
+  labs(x = "Prediction",
+       y = "Residuals over Prediction Interval",
+       title = "Residual plot on holdout set")
+```
 
 ## Other Charts
 
